containerization/k8s/ingress/httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-app
  namespace: ordering
  labels:
    app: httpd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-app
  template:
    metadata:
      labels:
        app: httpd-app
    spec:
      containers:
        - name: httpd-img
          image: hakobhn/microservice-order-apache:1.0.0
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: ordering
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
  selector:
    app: httpd-app
  type: LoadBalancer
