containerization/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: ordering
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
#    - host: ordering.example.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd-service
                port:
                  number: 80
